syntax = "proto3";

package store.management.system;

option go_package = "/laptop";

import "google/protobuf/timestamp.proto";

import "messages/processor_message.proto";
import "messages/memory_message.proto";
import "messages/storage_message.proto";
import "messages/screen_message.proto";
import "messages/keyboard_message.proto";

message Laptop {
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    Memory ram = 5;
    repeated GPU gpus = 6;
    repeated Storage storages = 7;
    Screen screen = 8;
    Keyboard keyboard = 9;

    oneof weight {
        double weight_kg = 10;
        double weight_lb = 11;
    }

    double price_usd = 12;
    uint32 release_year = 13;
    google.protobuf.Timestamp updated_at = 14;
}