syntax = "proto3";

option go_package = "./main";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 core_number = 3;
    uint32 thread_number = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}